--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My webpage</title>
+        <title>My personal page</title>
     </head>
     <body>
-        Hello, World!
+        This my project for "Web Programming with Python and JavaScript" week 1
+
     </body>
 </html>
