--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My personal page</title>
+        <title>My personal goals</title>
     </head>
     <body>
-        This my project for "Web Programming with Python and JavaScript" week 1
+        <h1>Goals to achieve in the following years</h1>
+        <h2><a href="study.html">Study</a></h2>
+        <p>I want to learn web programming with python(flask) and automation(selenium)</p>
+        <h2><a href="work.html">Work</a></h2>
+        <p>I want to work as a freelancer</p>
+        <h2><a href="lifestyle.html">Life Style</a></h2>
+        <p>Minimalist</p>
+        <h2><a href="about.html">About myself</a></h2>
+        <p>Who i am </p>
+
+
+        
 
     </body>
 </html>
