--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles.css">
+        <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+        -->
         <title>My personal goals</title>
     </head>
     <body>
+        <div class="topnav">
+            <a class="active" href="index.html">Home</a>
+            <a href="study.html">Study</a>
+            <a href="work.html">Work</a>
+            <a href="lifestyle.html">Life Style</a>
+            <a href="about.html">About</a>
+            <hr>
+        </div>
+
+        <header>
         <h1>Goals to achieve in the following years</h1>
+        </header>
         <h2><a href="study.html">Study</a></h2>
         <p>I want to learn web programming with python(flask) and automation(selenium)</p>
         <h2><a href="work.html">Work</a></h2>
